<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Start</string>
    <string name="dummy_content">AGENDA\nAMBIMETRICS</string>
    <string name="button_registrar">Registrarse</string>
    <string name="button_login">Login</string>
    <string name="title_activity_registrarse">RegistrarseActivity</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_opciones">Opciones</string>
    <string name="button_anyadir">+</string>
    <string name="button_editar">Editar</string>
    <string name="title_activity_modificar_contacto">ModificarContactoActivity</string>
    <string name="title_activity_anyadir_contacto">AnyadirContactoActivity</string>
    <string name="title_activity_modificar_perfil">ModificarPerfilActivity</string>
    <string name="edit_nombre">Nombre</string>
    <string name="edit_apellidos">Apellidos</string>
    <string name="edit_telefono">Teléfono</string>
    <string name="edit_pais">País</string>
    <string name="edit_provincia">Provincia</string>
    <string name="edit_ciudad">Ciudad</string>
    <string name="edit_email">e-Mail</string>
    <string name="button_guardar">Guardar</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="edit_password">Password</string>

</resources>